[package]
name = "winx"
version = "0.33.0"
authors = [
    "Jakub Konka <kubkon@jakubkonka.com>",
    "Dan Gohman <dev@sunfishcode.online>"
]
description = "Windows API helper library"
documentation = "https://docs.rs/winx"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/sunfishcode/winx"
edition = "2018"

[dependencies]
bitflags = "1.0"
io-lifetimes = { version = "0.7.0", default-features = false }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
